--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="ball" id="ball-5"></div>
       <div class="ball" id="ball-6"></div>
     </div>
+    <p id="answer">Escolha uma cor</p>
+    <button id="reset-game">Resetar o jogo/cores</button>
   </main>
   <script src="script.js"></script>
 </body>
