Inicio do requisito bônus

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     </div>
     <p id="answer">Escolha uma cor</p>
     <button id="reset-game">Resetar o jogo/cores</button>
+    <br>
+    <div id="containerScore">
+      <p id="placar">Placar:  </p>
+      <p id="score"></p>
+    </div>
   </main>
   <script src="script.js"></script>
 </body>
