--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
     <div id="containerScore">
       <p id="placar">Placar:  </p>
-      <p id="score"></p>
+      <p id="score">0</p>
     </div>
   </main>
   <script src="script.js"></script>
